add hero steps and projects sections

--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -1,10 +1,9 @@
-$container: 1920;
-$padding: 15;
+$container: 1300;
+$padding: 10;
 $containerWithPadding: $container + ($padding * 2);
 
 
-$red: #600A0A;
-$black: #020202;
-$white: #fff;
-$green: #16362D;
-$text-red:#FF0000;
+$black: #262626;
+$white: #F8F8F8;
+$green: #6B9E23;
+$gray:#F1F1F1;
