--- a/src/scss/common/common.scss
+++ b/src/scss/common/common.scss
@@ -1,38 +1,19 @@
-html {
-    scroll-behavior: smooth;
-}
+// html {
+//     scroll-behavior: smooth;
+// }
 
 body {
-    scroll-behavior: smooth;
-    font-family: "SuisseIntl";
+    // scroll-behavior: smooth;
     font-style: normal;
     line-height: normal;
-    font-family: FuturaPT;
+    font-family: Golos;
     font-weight: 400;
-    background-color: $black;
-    color: $white;
-    @include adaptive-value("font-size", 18, 14, 1);
+    color: $black;
 
     &._noscroll {
         overflow: hidden;
     }
 
-    &._loading {
-        &:before {
-            position: fixed;
-            content: "";
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 20;
-            background-color: rgba($color: $white, $alpha: 0.5);
-            background-image: url("@img/loading.svg");
-            background-size: 100px;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-    }
 }
 
 .wrapper {
@@ -49,8 +30,6 @@ body {
 main {
     position: relative;
     flex: 1 1 auto;
-
-    @include adaptive-value("min-height", 600, 275, 1);
 }
 
 ._container {
@@ -77,821 +56,141 @@ figure {
 }
 
 h1 {
+    font-weight: 700;
+    @include adaptive-value('font-size', 40, 20, 1);
+    line-height: 1.5;
+    text-transform: uppercase;
+
+    span {
+        @include adaptive-value('font-size', 48, 24, 1);
+    }
+
+    @media (max-width:1024px) {
+        line-height: 1;
+    }
+
+
+}
+
+h2 {
+    color: $green;
+    @include adaptive-value('font-size', 40, 22, 1);
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    text-transform: uppercase;
 }
 
 h2,
 h3,
 h4,
 h5,
-h6 {
-}
-
-p {
-    font-size: 16px;
-    letter-spacing: -0.03px;
-    line-height: 1.2;
-    font-weight: 300;
-
-    @media (max-width: 1024px) {
-        font-size: 14px;
-        letter-spacing: normal;
-    }
-}
+h6 {}
 
 ._btn {
     display: flex;
+    align-items: center;
     justify-content: center;
-    color: $white;
-    font-size: 18px;
-    line-height: 100%;
-    letter-spacing: -0.03px;
+    padding: 24px;
+    border-radius: 8px;
+
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
     text-transform: uppercase;
-    opacity: 0.5;
-    transition: opacity 0.3s ease 0s;
-
-    @media (any-hover: hover) {
-        &:hover {
-            opacity: 1;
-        }
-    }
-
-    margin-top: 80px;
-
-    @media (max-width: 1024px) {
-        font-size: 16px;
-        margin-top: 40px;
-        letter-spacing: normal;
-    }
-
-    @media (max-width: 768px) {
-        font-size: 14px;
-    }
-
-    @media (max-width: 425px) {
-        font-size: 12px;
-    }
-}
-
-.text-box {
-    position: relative;
-    @include adaptive-value("margin-bottom", 150, 50, 1);
-    @include adaptive-value("padding-top", 100, 50, 1);
-    @include adaptive-value("padding-bottom", 100, 50, 1);
-
-    &:after {
-        position: absolute;
-        content: "";
-        left: 50%;
-        top: 0;
-        transform: translate(-50%, 0);
-        height: 100%;
-        width: 100vw;
-        z-index: -1;
-    }
-
-    .big-text {
-        color: $white;
-        font-weight: 500;
-        @include adaptive-value("font-size", 50, 18, 1);
-        line-height: 1;
-    }
-}
-
-.breadcrumbs {
-    margin-bottom: 30px;
-
-    @media (max-width: 1024px) {
-        margin-bottom: 15px;
-    }
-
-    ul {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-
-        @media (max-width: 1024px) {
-            overflow-x: auto;
-            width: 100vw;
-            padding-inline: 10px;
-            margin-left: -10px;
-        }
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
-    }
-
-    li {
-        color: $black;
-        font-weight: 300;
-        @include adaptive-value("font-size", 14, 12, 1);
-
-        display: flex;
-        align-items: center;
-        gap: 5px;
-
-        &.active {
-            opacity: 0.5;
-        }
-
-        div {
-            background-color: $white;
-            width: 2px;
-            height: 2px;
-        }
-
-        a {
-            white-space: nowrap;
-            transition: opacity 0.3s ease 0s;
-            @include adaptive-value("font-size", 14, 12, 1);
-
-            @media (any-hover: hover) {
-                &:hover {
-                    opacity: 0.5;
-                }
-            }
-        }
-
-        span {
-            white-space: nowrap;
-        }
-
-        @media (any-hover: hover) {
-            &:hover {
-                a {
-                    color: $black;
-                }
-            }
-        }
-    }
-
-    .aioseo {
-        // .aioseo-breadcrumbs
-
-        &-breadcrumbs {
-            color: $black;
-            @include adaptive-value("font-size", 14, 12, 1);
-            font-weight: 300;
-
-            display: flex;
-            align-items: center;
-            gap: 5px;
-
-            @media (max-width: 1024px) {
-                overflow-x: auto;
-                width: 100vw;
-                padding-inline: 10px;
-                margin-left: -10px;
-            }
-
-            &::-webkit-scrollbar {
-                display: none;
-            }
-
-            a {
-                transition: all 0.3s ease 0s;
-
-                @media (any-hover: hover) {
-                    &:hover {
-                        opacity: 0.5;
-                    }
-                }
-            }
-        }
-
-        // .aioseo-breadcrumb
-
-        &-breadcrumb {
-            flex: 0 0 auto;
-            font-weight: 300;
-            @include adaptive-value("font-size", 14, 12, 1);
-
-            &:last-child {
-                opacity: 0.5;
-            }
-
-            // .aioseo-breadcrumb-separator
-
-            &-separator {
-                font-size: 0.5em;
-            }
-        }
-    }
-
-    // .breadcrumbs-white
-
-    &-white {
-        li {
-            color: $white;
-
-            a {
-            }
-
-            @media (any-hover: hover) {
-                &:hover {
-                    a {
-                        color: $white;
-                    }
-                }
-            }
-        }
-
-        .aioseo-breadcrumbs {
-            color: $white;
-
-            a {
-                @media (any-hover: hover) {
-                    &:hover {
-                        color: $white;
-                    }
-                }
-            }
-        }
-    }
-}
-
-._pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 60px;
-    @media (max-width: 1024px) {
-        margin-top: 45px;
-    }
-
-    ul {
-        display: flex;
-        align-items: flex-end;
-        gap: 10px;
-
-        li {
-            span,
-            a {
-                width: 40px;
-                height: 40px;
-                opacity: 0.3;
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-                font-weight: 300;
-                transition: opacity 0.3s ease 0s;
-
-                @media (any-hover: hover) {
-                    &:hover {
-                        opacity: 1;
-                    }
-                }
-
-                @media (max-width: 1024px) {
-                    width: 35px;
-                    height: 35px;
-                }
-            }
-
-            span {
-                border-bottom: 1px solid rgba($color: $white, $alpha: 0);
-
-                &.current {
-                    opacity: 1;
-                    font-weight: 400;
-                    border-color: $white;
-                }
-            }
-
-            .prev,
-            .next {
-                opacity: 1;
-                transition: opacity 0.3s ease 0s;
-
-                @media (any-hover: hover) {
-                    &:hover {
-                        opacity: 0.5;
-                    }
-                }
-            }
-        }
-    }
-}
-
-._product__price {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-
-    text-transform: lowercase;
-}
-
-._title {
-    margin-bottom: 60px !important;
-    padding: 0 !important;
-
-    @media (max-width: 1024px) {
-        margin-bottom: 45px !important;
-    }
-
-    .title__box {
-        @media (max-width: 768px) {
-            margin: 15px 0;
-        }
-
-        div {
-            margin: 30px 0;
-
-            display: flex;
-            align-items: flex-end;
-            justify-content: space-around;
-            height: 100%;
-            gap: 5px;
-
-            width: 100%;
-            @include adaptive-value("font-size", 24, 16, 1);
-            line-height: 1;
-            letter-spacing: -0.03px;
-            text-transform: uppercase;
-
-            @media (max-width: 1024px) {
-                letter-spacing: normal;
-            }
-
-            @media (max-width: 768px) {
-                margin: 15px 0;
-            }
-
-            h1 {
-                white-space: nowrap;
-            }
-
-            & > :last-child {
-                margin-left: auto;
-            }
-
-            span {
-                pointer-events: none;
-                display: flex;
-                align-items: flex-end;
-                width: 100%;
-                overflow: hidden;
-
-                width: 100%;
-                height: 6px;
-                flex: 1 1 auto;
-                transition: max-width 0.5s ease-in 0s;
-
-                background-image: radial-gradient(circle at 3px 3px, $red 1px, transparent 0);
-                background-position: left bottom;
-                background-size: 6px;
-                background-repeat: repeat-x;
-            }
-        }
-
-        p {
-            max-width: 490px;
-            font-weight: 300;
-            font-size: 18px;
-
-            @media (max-width: 1024px) {
-                font-size: 16px;
-            }
-
-            @media (max-width: 768px) {
-                font-size: 14px;
-            }
-        }
-    }
-
-    &._mt {
-        margin-top: 160px;
-        margin-bottom: 75px !important;
-
-        @media (max-width: 1024px) {
-            margin-top: 120px;
-            margin-bottom: 60px !important;
-        }
-
-        @media (max-width: 768px) {
-            margin-top: 70px;
-            margin-bottom: 45px !important;
-        }
-    }
-}
-
-._label {
-    pointer-events: none;
-    opacity: 0.5;
-    font-weight: 300;
     white-space: nowrap;
-}
 
-button {
-    svg,
-    img {
-        pointer-events: none;
-    }
-}
 
-._text-box {
-    max-width: 450px;
-    width: 100%;
 
-    p {
-        &:not(:last-child) {
-            margin-bottom: 10px;
-        }
+    @media (max-width:1024px) {
+        padding: 13px;
+        border-radius: 4px;
     }
 
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        @include adaptive-value("font-size", 22, 16, 1);
+    @media (max-width:425px) {
+        font-size: 8px;
     }
 
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    ._label {
-        margin-top: 30px;
-        margin-bottom: 10px;
-        display: block;
 
-        &:first-child {
-            margin-top: 0;
-        }
+    // ._btn-fill
+
+    &-fill {
+        background-color: $green;
+        color: $white;
     }
 
-    ._label {
-        text-transform: uppercase;
-        font-size: 14px;
+    // ._btn-stroke
 
-        @media (max-width: 768px) {
-            font-size: 12px;
-        }
-    }
+    &-stroke {
+        border: 2px solid $green;
+        color: $green;
 
-    ol {
-        margin: 15px 0;
-        padding-left: 15px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        @media (max-width: 1024px) {
-        }
-
-        li {
-            font-weight: 300;
-            list-style: numbers;
-        }
-    }
-
-    a {
-        text-decoration: underline;
-        transition: opacity 0.3s ease 0s;
-
-        @media (any-hover: hover) {
-            &:hover {
-                opacity: 0.5;
-            }
-        }
-    }
-
-    img,
-    picture,
-    figure {
-        width: auto;
-        height: auto;
-    }
-}
-
-._text-description {
-    padding-top: 150px;
-
-    width: calc(50% - 7.5px);
-    margin-left: auto;
-
-    @media (max-width: 1024px) {
-        padding-top: 100px;
-    }
-
-    @media (max-width: 768px) {
-        padding-top: 45px;
-        margin-left: unset;
-        width: 75%;
-    }
-
-    @media (max-width: 450px) {
-        width: 100%;
-    }
-
-    // ._text-description__body
-
-    &__body {
-        max-height: 130px;
-        height: fit-content;
-        overflow: hidden;
-        transition: max-height 0.3s ease 0s;
-
-        &._active {
-            max-height: fit-content;
+        @media (max-width:425px) {
+            border-width: 1px;
         }
     }
 }
 
-._big-text {
-    font-size: 20px;
-
-    @media (max-width: 1024px) {
-        font-size: 18px;
-    }
-
-    @media (max-width: 768px) {
-        font-size: 16px;
-    }
-}
-
-._show-text {
+.pagination {
     display: flex;
     align-items: center;
-    gap: 5px;
-    margin-top: 30px;
-    cursor: pointer;
-    position: relative;
-    width: 100%;
-
-    &:after {
-        position: absolute;
-        content: "";
-        left: 0;
-        bottom: 0;
-        height: 30px;
-        width: 100%;
-        box-shadow: 0px -10px 10px 0px $black;
-        background: linear-gradient(0deg, rgba($color: $black, $alpha: 0) 0%, $black 100%);
-
-        @media (max-width: 768px) {
-            height: 20px;
-        }
-    }
-
-    @media (max-width: 768px) {
-        margin-top: 15px;
-    }
-
-    * {
-        pointer-events: none;
-    }
-
-    @media (any-hover: hover) {
-        &:hover {
-            span {
-                opacity: 0.5;
-            }
-        }
-    }
-
-    span,
-    label {
-        position: relative;
-        z-index: 1;
-    }
+    justify-content: center;
+    width: fit-content;
+    margin-inline: auto;
+    gap: 2px;
 
     span {
-        display: block;
-        width: 5px;
-        height: 5px;
-        border-radius: 15px;
-        background-color: $white;
-
-        transition: opacity 0.3s ease 0s;
-    }
-
-    label {
-        display: none;
-    }
-
-    &._active {
-        span {
-            display: none;
-        }
-
-        label {
-            display: block;
-        }
-    }
-}
-
-._grid-span-2 {
-    @media (max-width: 1024px) {
-        height: 465px;
-        min-height: unset;
-    }
-    @media (min-width: 769px) {
-        grid-column: span 2;
-        aspect-ratio: unset !important;
-    }
-}
-
-._no-aspect-ratio {
-    @media (min-width: 769px) {
-        aspect-ratio: unset !important;
-    }
-}
-
-.quantity {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    @media (max-width: 1024px) {
-        gap: 5px;
-
-        * {
-            font-weight: 300;
-        }
-    }
-
-    .qty-btn {
-        cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 15px;
-        height: 15px;
-        flex: 0 0 auto;
+        width: 30px;
+        height: 30px;
+        border: 2px solid rgba($color: #000000, $alpha: 0);
+        border-radius: 50%;
 
-        svg,
-        img,
-        picture {
-            flex: 0 0 auto;
-            pointer-events: none;
-            transition: opacity 0.3s ease 0s;
+        position: relative;
+
+        &:after {
+            position: absolute;
+            content: '';
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 15px;
+            height: 15px;
+
+            border-radius: 50%;
+            background-color: $white;
         }
 
-        @media (any-hover: hover) {
-            &:hover {
-                svg,
-                img,
-                picture {
-                    opacity: 0.5;
-                }
-            }
+        &.swiper-pagination-bullet-active {
+            border-color: $green;
         }
     }
-
-    input {
-        text-align: center;
-        width: 36px;
-        flex: 0 0 auto;
-    }
 }
 
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type="number"] {
-    -moz-appearance: textfield;
-}
-
-[data-open-catalog] * {
-    pointer-events: none;
-}
-
-._more {
-    * {
-        pointer-events: none;
-    }
-}
-
-._text-animated {
-    .char {
-        transition: all 0.3s ease 0s;
-    }
-}
-
-._mb0 {
-    margin-bottom: 0 !important;
-}
-
-.line {
-    position: fixed;
-    position: absolute;
-    z-index: 1;
-    left: 50%;
-    top: 0;
-    transform: translate(-50%, 0);
-    width: 2px;
-    height: 0;
-    max-height: calc(100% - 25px);
-    background-color: $red;
-    pointer-events: none;
-}
-
-.search-form {
+.navigation {
     display: flex;
-    width: 100%;
-
-    height: 50px;
-
-    @media (max-width: 1024px) {
-        height: 40px;
-    }
-
-    input {
-        flex: 1 1 auto;
-        height: 100%;
-        background-color: rgba($color: $white, $alpha: 0.15);
-        padding: 1em;
-
-        &::-webkit-search-cancel-button {
-            display: none;
-        }
-    }
+    align-items: center;
+    justify-content: space-between;
 
     button {
-        width: 50px;
-        height: 50px;
-
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: $red;
-
-        transition: opacity 0.3s ease 0s;
-
-        @media (any-hover: hover) {
-            &:hover {
-                opacity: 0.75;
-            }
-        }
-
-        @media (max-width: 1024px) {
-            width: 40px;
-            height: 40px;
-        }
+        border-radius: 50%;
+        width: 34px;
+        height: 34px;
+        background-color: $gray;
 
         img,
         svg {
-            width: 20px;
-            height: 18px;
+            width: 12px;
+            height: 12px;
             flex: 0 0 auto;
-
-            @media (max-width: 1024px) {
-                width: 15px;
-                height: 13px;
-            }
-        }
-    }
-}
-
-.mute-audio {
-    position: fixed;
-    z-index: 3;
-    width: 14px;
-    height: 14px;
-
-    right: 60px;
-    bottom: 30px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    @media (max-width: 768px) {
-        right: 30px;
-    }
-
-    @media (max-width: 1024px) {
-        right: 12px;
-    }
-
-    img,
-    svg {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-
-        &:nth-child(2) {
-            display: none;
-        }
-    }
-
-    &._active {
-        img,
-        svg {
-            &:nth-child(1) {
-                display: none;
-            }
-
-            &:nth-child(2) {
-                display: block;
-            }
+            pointer-events: none;
         }
     }
 }
