--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,42 +1,21 @@
 @font-face {
-	font-family: Felidae;
+	font-family: Golos;
 	font-display: swap;
-	src: url("../fonts/Felidae.woff2") format("woff2"), url("../fonts/Felidae.woff") format("woff");
-	font-weight: 400;
+	src: url("../fonts/Golos-Text_Bold.woff2") format("woff2"), url("../fonts/Golos-Text_Bold.woff") format("woff");
+	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
-	font-family: FuturaPT;
+	font-family: Golos;
 	font-display: swap;
-	src: url("../fonts/FuturaPT-Book.woff2") format("woff2"), url("../fonts/FuturaPT-Book.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: FuturaPT;
-	font-display: swap;
-	src: url("../fonts/FuturaPT-Light.woff2") format("woff2"), url("../fonts/FuturaPT-Light.woff") format("woff");
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: SaolDisplay;
-	font-display: swap;
-	src: url("../fonts/SaolDisplay-Regular.woff2") format("woff2"), url("../fonts/SaolDisplay-Regular.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: FuturaPT;
-	font-display: swap;
-	src: url("../fonts/FuturaPT-Medium.woff2") format("woff2"), url("../fonts/FuturaPT-Medium.woff") format("woff");
+	src: url("../fonts/Golos-Text_Medium.woff2") format("woff2"), url("../fonts/Golos-Text_Medium.woff") format("woff");
 	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
-	font-family: SaintBartogeniaPersonalUseRegular;
+	font-family: Golos;
 	font-display: swap;
-	src: url("../fonts/SaintBartogeniaPersonalUseRegular-R9p2E.woff2") format("woff2"), url("../fonts/SaintBartogeniaPersonalUseRegular-R9p2E.woff") format("woff");
+	src: url("../fonts/Golos-Text_Regular.woff2") format("woff2"), url("../fonts/Golos-Text_Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
