--- a/src/scss/parts/hero.scss
+++ b/src/scss/parts/hero.scss
@@ -1,28 +1,9 @@
-.section {
-
-    // .section__container
-
-    &__container {}
-
-    // .section__body
-
-    &__body {
-
-        h2 {
-            margin-bottom: 36px;
-
-            @media (max-width:1024px) {
-                margin-bottom: 15px;
-            }
-        }
-    }
-}
-
 .hero {
     margin-top: 40px;
 
     @media (max-width:1024px) {
         margin-top: 20px;
+        margin-bottom: 160px;
     }
 
     // .hero__body
@@ -49,7 +30,6 @@
 
         @media (max-width:1024px) {
             padding: 10px;
-            color: $white;
 
             position: absolute;
             left: 0;
@@ -62,6 +42,10 @@
             margin-bottom: 50px;
             position: relative;
             z-index: 2;
+
+            @media (max-width:1024px) {
+                color: $white;
+            }
         }
 
 
@@ -69,9 +53,14 @@
             position: relative;
             z-index: 2;
             @include adaptive-value('font-size', 27, 14, 1);
+            @include adaptive-value('margin-bottom', 44, 20, 1);
+
             font-weight: 400;
             line-height: 100%;
-            @include adaptive-value('margin-bottom', 44, 20, 1);
+
+            @media (max-width:1024px) {
+                color: $white;
+            }
 
         }
 
@@ -95,6 +84,13 @@
             margin-top: 10px;
         }
 
+        @media (max-width:1024px) {
+            position: absolute;
+            left: 0;
+            width: 100%;
+            top: 100%;
+        }
+
         li {
             width: 100%;
             background-color: $gray;
@@ -111,7 +107,6 @@
             text-transform: uppercase;
 
             @media (max-width:1024px) {
-
                 padding: 10px;
                 gap: 10px;
                 border-radius: 5px;
