--- a/src/scss/common/accordeon.scss
+++ b/src/scss/common/accordeon.scss
@@ -1,18 +1,34 @@
 .accordion {
     & > :not(:last-child) {
-        margin-bottom: 25px;
+        margin-bottom: 33px;
+
+        @media (max-width:1024px) {
+            margin-bottom: 16px;
+        }
     }
 
     // .accordion__item
 
     &__item {
+        background-color: $green;
+        padding: 20px;
+
+        border-radius: 10px;
+
+        @media (max-width:1024px) {
+            border-radius: 5px;
+            padding: 15px;
+        }
+
         &[data-open] {
             .accordion__item-content {
                 grid-template-rows: 1fr;
             }
+
             .accordion__item-title {
-                svg {
-                    transform: rotate(-45deg);
+                button {
+                    transform: rotate(90deg);
+
                 }
             }
 
@@ -26,31 +42,58 @@
         &-title {
             width: 100%;
             cursor: pointer;
-            padding: 20px 0;
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 100%;
             cursor: pointer;
 
-            @include adaptive-value("font-size", 24, 16, 1);
-
+            color: $white;
+            @include adaptive-value('font-size', 36, 12, 1);
+            font-style: normal;
             font-weight: 500;
-            line-height: 1.1;
+            line-height: 1.17;
             text-transform: uppercase;
+
+            @media (max-width:1024px) {
+                font-weight: 400;
+            }
 
             @media (any-hover: hover) {
                 &:hover {
-                    svg {
-                        transform: rotate(45deg);
+                    button {
+                        transform: rotate(90deg);
                     }
                 }
             }
 
-            svg {
-                width: 20px;
-                height: 20px;
-                stroke: currentColor;
+            button {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                
+                width: 55px;
+                height: 55px;
+
+                @media (max-width:1024px) {
+                    width: 35px;
+                    height: 35px;
+                }
+
+                img,
+                picture,
+                svg {
+                    object-fit: contain;
+                    width: 18px;
+                    height: 18px;
+
+                    @media (max-width:1024px) {
+                        width: 14px;
+                        height: 14px;
+                    }
+                }
+
+                transform: rotate(-90deg);
                 transition: all 0.3s ease 0s;
             }
 
@@ -85,6 +128,11 @@
 
             &-height {
                 overflow: hidden;
+                color: $white;
+
+                div {
+                    margin-top: 20px;
+                }
 
                 // ol {
                 //     & > :not(:last-child) {
@@ -105,8 +153,7 @@
 
     // .accordion__open
 
-    &__open {
-    }
+    &__open {}
 
     ._btn {
         width: 100%;
