--- a/src/scss/parts/cards.scss
+++ b/src/scss/parts/cards.scss
@@ -77,3 +77,71 @@
         width: 370px;
     }
 }
+
+.advantages-card {
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: $gray;
+
+    // .advantages-card__img
+
+    &__img {
+        position: relative;
+        width: 100%;
+        padding-bottom: 74%;
+
+        img,
+        picture {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            object-fit: cover;
+        }
+    }
+
+    // .advantages-card__content
+
+    &__content {
+
+        h3 {
+            padding: 15px 25px;
+            color: $green;
+            font-size: 22px;
+            font-weight: 600;
+            line-height: normal;
+
+            @media (max-width:1024px) {
+                font-size: 21px;
+                padding: 10px 20px;
+            }
+        }
+
+        ol {
+            border-top: 2px solid $green;
+            padding: 15px 25px;
+
+            @media (max-width:1024px) {
+               padding: 15px 20px;
+            }
+
+            & > :not(:last-child) {
+                margin-bottom: 15px;
+
+                @media (max-width:1024px) {
+                    margin-bottom: 10px;
+                }
+            }
+
+            li {
+                font-size: 15px;
+                font-weight: 400;
+                line-height: normal;
+                list-style: disc;
+                margin-left: 18px;
+            }
+        }
+    }
+}
