--- a/src/scss/parts/grid.scss
+++ b/src/scss/parts/grid.scss
@@ -14,4 +14,21 @@
     &-3 {
         grid-template-columns: repeat(3, 1fr);
     }
+
+
+    // .grid-4
+
+    &-4 {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 40px 60px;
+
+        @media (max-width:1024px) {
+            gap: 20px 15px;
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media (max-width:768px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
 }
