--- a/src/scss/parts/hero.scss
+++ b/src/scss/parts/hero.scss
@@ -152,6 +152,10 @@
             margin-bottom: 20px;
         }
 
+        @media (max-width:768px) {
+            flex-direction: column;
+        }
+
         a {
             width: 100%;
         }
@@ -189,7 +193,8 @@
             overflow: hidden;
             height: auto;
 
-            img {
+            img,
+            picture {
                 width: 100%;
                 height: 100%;
                 pointer-events: none;
