--- a/src/scss/common/footer.scss
+++ b/src/scss/common/footer.scss
@@ -96,6 +96,14 @@
                 margin-bottom: 10px;
             }
 
+            transition: opacity 0.3s ease 0s;
+
+            @media (any-hover: hover) {
+                &:hover {
+                    opacity: 0.5;
+                }
+            }
+
             svg,
             img,
             picture {
@@ -115,18 +123,15 @@
     &__logocolumn {
 
         div {
-            display: flex;
             gap: 20px;
             @include adaptive-value('margin-top', 65, 20, 1);
 
             a {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background-color: $black;
                 width: 50px;
                 height: 50px;
                 border-radius: 10px;
+                background-color: $black !important;
+
 
                 img,
                 svg,
@@ -207,12 +212,3 @@
         }
     }
 }
-
-
-._container {}
-
-.wh {}
-
-.tg {}
-
-.yt {}
