--- a/src/scss/parts/cards.scss
+++ b/src/scss/parts/cards.scss
@@ -10,6 +10,28 @@
 
     gap: 10px;
 
+    @media (any-hover: hover) {
+        &:hover {
+            button {
+                background-color: $white;
+            }
+
+            div {
+                background-color: $white;
+
+                svg {
+                    stroke: $green;
+                }
+            }
+
+            h3 {
+                color: $white;
+                background-color: $black;
+
+            }
+        }
+    }
+
     // .project-card__img
 
     &__img {
@@ -22,7 +44,10 @@
         pointer-events: none;
     }
 
-    div {
+
+
+
+    h3 {
         position: relative;
         z-index: 1;
         border-radius: 2px;
@@ -35,19 +60,18 @@
         text-align: center;
         padding: 10px 15px;
 
+        transition: all 0.3s ease 0s;
 
-        h3 {
-            color: $white;
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 1.3;
-            text-transform: uppercase;
-
-        }
+        color: $white;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.3;
+        text-transform: uppercase;
+        transition: all 0.3s ease 0s;
     }
 
-    button {
+    div {
         position: relative;
         z-index: 1;
         display: flex;
@@ -58,13 +82,17 @@
         flex: 0 0 50px;
         width: 50px;
         height: 50px;
-        background-color: $white;
+        background-color: $green;
+        transition: all 0.3s ease 0s;
 
         img,
         svg,
         picture {
             width: 15px;
             height: 15px;
+            stroke: $white;
+            stroke-width: 3px;
+            transition: all 0.3s ease 0s;
         }
 
         @media (max-width:1300px) {
@@ -124,7 +152,7 @@
             padding: 15px 25px;
 
             @media (max-width:1024px) {
-               padding: 15px 20px;
+                padding: 15px 20px;
             }
 
             & > :not(:last-child) {
@@ -142,6 +170,95 @@
                 list-style: disc;
                 margin-left: 18px;
             }
+        }
+    }
+}
+
+.contacts-item {
+    display: flex;
+    flex-direction: column;
+    gap: 17px;
+
+    background-color: $green;
+    color: $white;
+    padding: 34px 23px;
+    border-radius: 10px;
+
+    @media (max-width:1024px) {
+        padding: 26px 20px;
+    }
+
+    label {
+        display: block;
+        flex: 1 1 auto;
+
+        font-size: 18px;
+        line-height: 120%;
+        text-transform: uppercase;
+
+        @media (max-width:1024px) {
+            font-size: 14px;
+        }
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+        gap: 17px;
+
+        span {
+            width: 73px;
+            height: 73px;
+            flex: 0 0 auto;
+            background-color: $white;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+
+            @media (max-width:1024px) {
+                width: 60px;
+                height: 60px;
+            }
+
+
+            img,
+            svg {
+                width: 50%;
+                flex: 0 0 auto;
+            }
+        }
+
+        color: #FFF;
+
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 120%;
+        text-transform: uppercase;
+
+        @media (max-width:1024px) {
+            font-size: 16px;
+        }
+    }
+
+    &:last-child a {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 120%;
+
+        @media (max-width:1024px) {
+            font-size: 14px;
+        }
+    }
+
+    &:nth-child(2) a {
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 90%;
+
+        @media (max-width:1024px) {
+            font-size: 14px;
         }
     }
 }
