--- a/src/scss/parts/section.scss
+++ b/src/scss/parts/section.scss
@@ -539,6 +539,15 @@
             width: 370px;
         }
 
+        @media (any-hover: hover) {
+            &:hover {
+                p {
+                    background-color: $black;
+                    color: $white;
+                }
+            }
+        }
+
         img,
         picture {
             position: absolute;
@@ -550,7 +559,7 @@
             pointer-events: none;
         }
 
-        div {
+        p {
             position: relative;
             z-index: 1;
             border-radius: 15px;
@@ -563,13 +572,14 @@
             line-height: 1.2;
             text-transform: uppercase;
 
+            transition: all 0.3s ease 0s;
+
             @include adaptive-value('font-size', 24, 14, 1);
 
             @media (max-width:1024px) {
                 border-radius: 10px;
                 padding: 15px;
             }
-
         }
     }
 
@@ -650,129 +660,15 @@
 
     }
 
+
     .form {
-        border-radius: 10px;
-        background: $green;
-        overflow: hidden;
-        padding: 50px 30px;
         max-width: 662px;
-        width: 100%;
+
 
         @media (max-width:1024px) {
             margin-top: 50px;
-            padding: 20px 15px;
-            max-width: 74%;
+            max-width: 80%;
         }
-
-
-        // .form__body
-
-        &__body {}
-
-        // .form__flex
-
-        &__flex {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-
-            @media (max-width:1024px) {
-                flex-direction: column;
-            }
-        }
-
-        // .form__item
-
-        &__item {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            padding-bottom: 25px;
-            border-bottom: 1px solid $white;
-            margin-bottom: 35px;
-
-            max-width: 500px;
-            width: 100%;
-
-            @media (max-width:1024px) {
-                gap: 5px;
-                padding-bottom: 10px;
-                margin-bottom: 20px;
-            }
-
-            input {
-                color: $white;
-
-                @media (max-width:768px) {
-                    font-size: 14px;
-                }
-            }
-
-            ::placeholder {
-                color: $white;
-                opacity: 0.5;
-            }
-
-            img,
-            svg,
-            picture {
-                width: 40px;
-                height: 25px;
-                object-fit: contain;
-
-                @media (max-width:768px) {
-                    width: 16px;
-                    height: 10px;
-                }
-            }
-        }
-
-        h6 {
-            margin-bottom: 50px;
-            color: $white;
-            @include adaptive-value('font-size', 32, 14, 1);
-            font-style: normal;
-            font-weight: 500;
-            line-height: 1;
-
-            @media (max-width:1024px) {
-                margin-bottom: 25px;
-            }
-        }
-
-        button,
-        label {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            padding: 13px 30px;
-            border-radius: 10px;
-            border: 2px solid $white;
-
-            color: $white;
-            text-align: center;
-            font-size: 13px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 1.2%;
-            text-transform: uppercase;
-
-            @media (max-width:1024px) {
-                width: 100%;
-            }
-        }
-
-        label {
-            cursor: pointer;
-            background-color: $white;
-            color: $green;
-
-            input {
-                display: none;
-            }
-        }
-
     }
 
 }
@@ -817,6 +713,8 @@
     }
 
     .swiper-slide {
+        height: auto;
+
         a {
             display: block;
             border-radius: 10px;
@@ -1012,11 +910,12 @@
     }
 
     .swiper-slide {
+        height: auto;
+
         a {
             display: block;
             border-radius: 10px;
             overflow: hidden;
-            @include adaptive-value('height', 385, 207, 1);
             border: 3px solid $green;
             cursor: pointer;
 
@@ -1118,6 +1017,21 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+    }
+}
+
+.contacts {
+
+    .grid {
+        gap: 63px;
+
+        @media (max-width:1200px) {
+            gap: 20px;
+        }
+
+        @media (max-width:1024px) {
+            grid-template-columns: 1fr;
         }
     }
 }
