--- a/src/scss/common/accordeon.scss
+++ b/src/scss/common/accordeon.scss
@@ -71,7 +71,8 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                
+
+                background-color: $white;
                 width: 55px;
                 height: 55px;
 
@@ -86,6 +87,7 @@
                     object-fit: contain;
                     width: 18px;
                     height: 18px;
+                    stroke: $green;
 
                     @media (max-width:1024px) {
                         width: 14px;
@@ -104,7 +106,7 @@
             @media (any-hover: hover) {
                 &:hover {
                     svg {
-                        transform: rotate(45deg);
+                        transform: rotate(180deg);
                     }
                 }
             }
