--- a/src/scss/common/common.scss
+++ b/src/scss/common/common.scss
@@ -187,7 +187,7 @@ h6 {}
     justify-content: center;
     width: fit-content;
     margin-inline: auto;
-    gap: 2px;
+    gap: 8px;
 
     span {
         display: flex;
@@ -195,10 +195,11 @@ h6 {}
         justify-content: center;
         width: 30px;
         height: 30px;
-        border: 2px solid rgba($color: #000000, $alpha: 0);
+        border: 2px solid transparent;
         border-radius: 50%;
 
         position: relative;
+        cursor: pointer;
 
         &:after {
             position: absolute;
@@ -210,7 +211,7 @@ h6 {}
             height: 15px;
 
             border-radius: 50%;
-            background-color: $white;
+            background-color: $black;
         }
 
         &.swiper-pagination-bullet-active {
@@ -223,8 +224,6 @@ h6 {}
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-
 }
 
 .prev,
@@ -235,7 +234,7 @@ h6 {}
     border-radius: 50%;
     width: 34px;
     height: 34px;
-    background-color: $gray;
+    background-color: $green;
     flex: 0 0 auto;
 
     img,
@@ -244,6 +243,15 @@ h6 {}
         height: 12px;
         flex: 0 0 auto;
         pointer-events: none;
+        stroke: $white;
+        stroke-width: 3px;
+    }
+}
+
+.prev {
+    img,
+    svg {
+        transform: rotate(180deg);
     }
 }
 
